refactor: removed usage of some java deprecated methods