@@ -237,7 +237,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Integer(100), (Integer) doc.field("number"));
+    assertEquals(Integer.valueOf(100), (Integer) doc.field("number"));
   }
 
   @Test
@@ -250,7 +250,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Integer(100), (Integer) doc.field("number"));
+    assertEquals(Integer.valueOf(100), (Integer) doc.field("number"));
   }
 
   @Test
@@ -263,7 +263,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Long(3000000000L), (Long) doc.field("number"));
+    assertEquals(Long.valueOf(3000000000L), (Long) doc.field("number"));
   }
 
   @Test
@@ -275,7 +275,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Long(3000000000L), (Long) doc.field("number"));
+    assertEquals(Long.valueOf(3000000000L), (Long) doc.field("number"));
   }
 
   @Test
@@ -295,7 +295,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     proc.execute();
     List<ODocument> res = getResult();
     ODocument doc = res.get(0);
-    assertEquals(new Integer(1), (Integer) doc.field("id"));
+    assertEquals(Integer.valueOf(1), (Integer) doc.field("id"));
     assertNull(doc.field("postId"));
     assertEquals("Hello", (String) doc.field("text"));
   }
@@ -310,7 +310,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Integer(1), (Integer) doc.field("id"));
+    assertEquals(Integer.valueOf(1), (Integer) doc.field("id"));
     assertNull(doc.field("postId"));
     assertEquals("Hello", (String) doc.field("text"));
   }
@@ -325,7 +325,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Integer(1), (Integer) doc.field("id"));
+    assertEquals(Integer.valueOf(1), (Integer) doc.field("id"));
     assertNull(doc.field("postId"));
     assertEquals("Hello", (String) doc.field("text"));
   }
@@ -341,7 +341,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Integer(1), (Integer) doc.field("id"));
+    assertEquals(Integer.valueOf(1), (Integer) doc.field("id"));
     assertThat(doc.<String>field("title")).isNull();
     // assertEquals("", (String) doc.field("title"));
     assertEquals("Hello", (String) doc.field("text"));
@@ -357,7 +357,7 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Integer(1), (Integer) doc.field("id"));
+    assertEquals(Integer.valueOf(1), (Integer) doc.field("id"));
     assertThat(doc.<String>field("title")).isNull();
     assertEquals("Hello", (String) doc.field("text"));
   }
@@ -388,9 +388,9 @@ public class OETLCSVExtractorTest extends OETLBaseTest {
     List<ODocument> res = getResult();
     assertFalse(res.isEmpty());
     ODocument doc = res.get(0);
-    assertEquals(new Integer(1), (Integer) doc.field("id"));
+    assertEquals(Integer.valueOf(1), (Integer) doc.field("id"));
     assertEquals("my test text", (String) doc.field("text"));
-    assertEquals(new Integer(1), (Integer) doc.field("num"));
+    assertEquals(Integer.valueOf(1), (Integer) doc.field("num"));
   }
 
   @Test
